# workspace

./: .tmp.swp  WIKI.rar  english.txt  env_of_RandT  git.sh  git_clone.sh  helloworld.py  index.html  move2107.sh  sync.sh  task  tmp  translate
CMake_test/: CMakeLists.txt  hello.cpp
CMake_test/cmake_modules_version/: CMakeLists.txt
CMake_test/cmake_source_file_version/: main.cpp
IMM/: clearRaid0.sh  config  configRaid0.sh  wc.sh
KVM/: test.sh
RDMA/: RDMA
RHOSP/: .step.txt.swp  check_swift  overcloud_se.tar.bz2  step.txt  xrdp.success  xrdp.txt
WIKI/: .index.html.swp  :::::  :w  README.md  \  index.html  install_nginx.sh  move2107.sh  move2local.sh  nginx.conf
ansbile/: playbook.yaml  vsftpd.conf.j2
ceph_core_analyse/: index.html  move2local.sh
cherrypy/: .main2.py.swp  cherrypy_test.py  config  deploy.sh  main.py  main2.py  test.sh
code_analyse/: move2local.sh
community_ceph/: server_info
daemon/: main.cpp
daemon_dup2/: main.cpp
deep_learning/: main_all_input_data.template.py
disk_check/: dd.sh  dd.sh.bak  inputfile  outputfile  start.sh
docker/: docker.sh
documents/: AVG.register  Gene_Editing_Era.txt
excel_hong/: hong1
fio/: create_iamge.sh  delete.sh  fio.config  format.py  format.sh  generate.sh  log  network performance.xlsx  performance_all.xlsx  pull_log.sh  run.sh  scp.sh  scp_to.sh  start.sh  xlsx.py
fio_disk/: run.sh
iscsi/: script_path
kickstart/: anaconda-ks.cfg  ks.cfg  mount.sh  redhat-7.5-anaconda-ks.cfg
linux-ceph-tuning/: linux-ceph-tuning
mine-hint/: a.out  test.c
not_now/: git_list
src/: OSD.cc.bak  (+1 more)
(+3630 files in other folders)
